# face-verification-demo

./: .gitignore  Dockerfile  Pipfile  README.md  path.sh  pyproject.toml  run.sh  run_client.sh  run_server.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/cpu_machine/: docker-compose.yml
.devcontainer/gpu_machine/: docker-compose.yml
.devcontainer/jetson/: docker-compose.yml
baseimages/: README.md
baseimages/cpu_machine/: Dockerfile
baseimages/gpu_machine/: Dockerfile
baseimages/jetson/: Dockerfile
baseimages/mac/: Dockerfile
baseimages/pi/: Dockerfile
conf/CIFAR10/Centralized_GNResNet18/: search_space.yaml
conf/CIFAR10/Centralized_ResNet18/: best_config.json  search_space.yaml
conf/CIFAR10/Centralized_tinyCNN/: best_config.json  search_space.yaml
docker/: README.md
docker/cpu_machine/: Dockerfile
docker/gpu_machine/: Dockerfile
docker/jetson_demo/: Dockerfile
docker/pi/: Dockerfile
face_verification/: README.md  centralized_verification.py  client.py  fedavg_verification.py  fedaws_verification.py  federated_verification.py  inference_visualizer.py  performance_visualizer.py  preprocess_face.py  server.py  visualizer.py
local/: centralized.py  centralized_raytuning.py  client.py  partitions.py  server.py  simulation.py
setup/: README.md  hosts.yml  pi-cluster.yml
shell/: configure_gpu.sh  entrypoint.sh  grid.sh  jetson_launch_container.sh  launch_container.sh  mount_picluster.sh  path.sh  pi_launch_container.sh  run_centralized.sh  run_centralized_raytuning.sh  run_centralized_verification.sh  run_client.sh  run_face_verification_client.sh  run_face_verification_server.sh  run_fedavg_verification.sh  run_fedaws_verification.sh  run_federated_verification.sh  run_fv_centralized.sh  run_fv_client.sh  run_fv_simulation.sh  run_partitions.sh  run_server.sh  run_simulation.sh
src/: driver.py
src/client_app/: __init__.py  app.py  base_client.py  client.py  face_client.py  numpy_client.py  ray_client.py
src/common/: __init__.py  parameter.py  serde.py  typing.py
src/dataset_app/: __init__.py  celeba_json.py  centralized_dataset.py  common.py  datasets.py  federated_dataset.py
src/facefl/: __init__.py
src/models/: base_model.py  driver.py  efficientnet.py  metric_learning.py  resnet.py  tinycnn.py
src/server_app/: README.md  app.py  client_manager.py  client_proxy.py  criterion.py  custom_history.py  custom_server.py  history.py  raytuning_server.py  server.py  wandb_server.py
src/simulation_app/: app.py
src/tune_app/: centralized.py
src/utils/: utils_dataset.py  utils_face.py  utils_model.py  utils_plot.py  utils_server.py  utils_tune.py  utils_wandb.py
(+78 files in other folders)
